# car-game

./: .gitignore  COMPETITION.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/: .gitignore  README.md  build-all.sh
examples/cpp-ai-binary/: .gitignore  CMakeLists.txt  car_ai.cpp
examples/cpp-ai-simple/: .gitignore  Makefile  car_ai.cpp
examples/go-ai-binary/: .gitignore  Makefile  main.go
examples/rust-ai-binary/: .gitignore  Cargo.toml
examples/rust-ai-binary/src/: lib.rs
examples/rust-ai-simple/: .gitignore  Cargo.toml  Makefile
examples/rust-ai-simple/src/: lib.rs
public/: car_ai_binary.wasm  car_ai_simple.wasm
public/wasm/: c_sample.wasm  go_sample.wasm  sample_ai.js  simple_ai.wasm
src/: car.ts  errors.ts  game.ts  index.ts  input.ts  road.ts  toast.ts  types.ts  wall.ts
src/ai/: AIFactory.ts  CarAI.ts  PlayerAI.ts  SimpleAI.ts  WasmAI.ts  WasmLoader.ts  loadWasmAI.ts
src/ai/assemblyscript-sample/: build.sh  package-lock.json  package.json  simple_ai.ts
src/ai/c-sample/: build.sh
src/ai/go-sample/: build.sh  go_sample.go
src/ai/rust-sample/: Cargo.toml  build.sh
src/ai/rust-sample/src/: lib.rs
src/ai/wasm/: BinaryWasmAIAdapter.ts  README.md  SimpleWasmAIAdapter.ts  WasmAIExample.ts  loadSimpleAI.ts  loadWasmAI.ts
src/ai/wasm-sample/: build.sh  sample_ai.c
src/levels/: level1.ts
src/physics/: PhysicsCar.ts  PhysicsGame.ts  PhysicsRoad.ts
src/utils/: math.ts  road.ts
